--- a/index.html
+++ b/index.html
@@ -583,7 +583,7 @@
                   <section>
                     <span class="ds-year">2024.07.01</span>
                     <h3 class="ds-work-tilte"> Visiting Research at the University of Oulu, Finland</h3>
-                      <p>Started a long-term (9-month) research visit at the University of Oulu, Finland, under the supervision of <b>Prof. Mehdi Bennis</b>, one of the top researchers in wireless communication.</p>
+                      <p>Started a long-term (9-month) research visit at the University of Oulu, Finland, under the supervision of <b>Prof. Mehdi Bennis (Fellow, IEEE)</b>, one of the top researchers in wireless communication.</p>
                     <a href="https://www.oulu.fi/en/researchers/mehdi-bennis" >[Learn More]</a>
                       <div style="height: 20px;"></div>
                   </section>
