--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
           <h2 class="ds-heading">Grants</h2>
           <div class="ds-work-list-section">
 
-             <h3 class="ds-officename"> Science Tokyo SPRING <br>（Tokyo Tech 総合知と癒しの次世代フロントランナー育成プログラム） </h3>
+             <h3 class="ds-officename"> Science Tokyo SPRING <br>（東京科学大学総合知と癒しの次世代フロントランナー育成プログラム） </h3>
                       <span class="ds-year">2024.04 - 2026.03</span>
                       <p> Grant amount of 2.46 million yen per year, full tuition exemption （助成金額年額246万円、授業料全額免除） </p>
                       <a href="https://www.spring-boost.i.isct.ac.jp/">[View Details]</a>
