--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 
       <div class="col-12 col-md-6">
         <section>
-          <span class="ds-year">2025.09</span>
+          <span class="ds-year">2025.09 （参加予定）</span>
           <h3 class="ds-officename">Intern (オープンハウス・「調達」コース) </h3>
           <span class="ds-department">Sony Group (ソニーグループ株式会社) &emsp;<a href="https://www.sony.com/ja/SonyInfo/Jobs/internship/openhouse/engineer.html?t" target="_blank">[Program Info]</a> </span>
         </section>
