--- a/index.html
+++ b/index.html
@@ -539,6 +539,29 @@
 
 
 
+
+
+
+          <div class="ds-work-list">
+              <div class="row">
+                  <div class="col-12 col-sm-12 col-md-7 col-lg-7 col-xl-7 col-xxl-7">
+                      <section>
+                          <span class="ds-year">2025.05.28</span>
+                          <h3 class="ds-work-tilte"> Completed the course "MATLAB Introduction"  </h3>
+                          <p> Successfully completed 100% of the self-paced training course "MATLAB Introduction" and received the official Course Completion Certificate. </p>
+                          <a href="https://matlabacademy.mathworks.com/progress/share/jp/certificate.html?id=9ab84288-1970-429f-9e95-a11b372aab27" >[Learn More]</a>
+                            <div style="height: 50px;"></div>
+                      </section>
+                  </div>
+                  <div class="col-12 col-sm-12 col-md-5 col-lg-5 col-xl-5 col-xxl-5">
+                      <figure><img src="assets/images/matlab_beginner.png"></figure>
+                  </div>
+              </div>
+            </div>
+
+
+
+            
             <div class="ds-work-list">
               <div class="row">
                   <div class="col-12 col-sm-12 col-md-7 col-lg-7 col-xl-7 col-xxl-7">
