--- a/index.html
+++ b/index.html
@@ -482,8 +482,8 @@
         <li>Outstanding Undergraduate Thesis Award from the School of Information and Communications, NUDT, 2019</li>
         <li>The Second Prize in The First Central China English Debate Open, FLTRP, 2018</li>
         <li>The Model Student Prize from NUDT, 2018</li>
-        <li>The Commendation from School of Electronic Science and Technology, NUDT, 2018</li>
-        <li>Outstanding Student Prize from School of Electronic Science and Technology, NUDT, 2018 </li>
+        <li>The Commendation from School of Basic Education, NUDT, 2018</li>
+        <li>Outstanding Student Prize from School of Basic Education, NUDT, 2018 </li>
         <li>The Second Prize at the English Writing Contest held by NUDT, 2017</li>
       </ul>
     </div>
