--- a/index.html
+++ b/index.html
@@ -343,9 +343,9 @@
     </div>
   </div>
 </div>
-<!-- End of Invited Talks -->
+<!-- End of Invited Talks
 
-
+ -->
 
 
 
@@ -358,6 +358,7 @@
 
       <h3 class="ds-officename">International Conferences</h3>
       <div class="row ds-experience-list">
+        <p class="publication-entry"> <b>[Invited Presentation]</b> <b><u>C. Chen</u></b>, "Enabling Visual Scene Recovery from Wi-Fi CSI for Occlusion-Free Surveillance", invited to present at the Proc. of IEEE WF-IoT, Chengdu, China, 2025.10. <a href="https://wfiot2025.iot.ieee.org/">[View Details]</a></p>
         <p class="publication-entry"> <b>[Peer-reviewed]</b> <b><u>C. Chen</u></b>, "Enabling Visual Scene Recovery from Wi-Fi CSI for Occlusion-Free Surveillance", presented at ASSET Symposium of ACM MobiSys (Poster), Tokyo, Japan, 2024.06. <a href="https://www.sigmobile.org/mobisys/2024/asset.html">[View Details]</a></p>
         
       </div>
